Replace use of deprecated methods